--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,20 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52" />
+    <com.example.administrator.myapplication.image.SeniorCropImageView
+        android:id="@+id/iv"
+        android:layout_width="200dp"
+        android:layout_height="400dp" />
+    <Button
+        android:id="@+id/bt"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:text="跳转"/>
+
 
 </android.support.constraint.ConstraintLayout>
